# si-emis

./: .env.example  .gitmodules  README.md  pyproject.toml
examples/: quicklook.ipynb
src/si_emis/: style.py
src/si_emis/analysis/: altitudes.py  count_footprints.py  emissivity_comparison.py  icemotion.py  infrared.py  iwv.py  kmeans_stats.py  noise.py  overflights.py  ts_difference.py
src/si_emis/data_preparation/: airsat.py  camera.py  coordinates.yaml  footprint.py  imagery.py  matching.py  profile.py  profile.yaml  radiance.py  satellite.py  soundings.py  surface.py  terrain.py  timeshifts.py  transformation.py
src/si_emis/figures/: figure_01_map.py  figure_02_reflection.py  figure_03_case.py  figure_04_hist.py  figure_05_kmeans.py  figure_06_spatial.py  figure_07_satmap.py  figure_08_airsat.py  figure_09_optimalk.py  figure_10_images.py  figure_11_myi.py
src/si_emis/readers/: airborne_tb.py  airsat.py  emissivity.py  fish_eye.py  ne23.py  pamtra_simulation.py  profile.py
src/si_emis/retrieval/: emissivity.py  makesetups.py  pamsim.py  run_pamtra_simulation.sh
src/si_emis/retrieval/setups/: setup_ACLOUD_P5_RF23.yaml  setup_ACLOUD_P5_RF25.yaml  setup_AFLUX_P5_RF08.yaml  setup_AFLUX_P5_RF14.yaml  setup_AFLUX_P5_RF15.yaml  setup_sat_ACLOUD_P5_RF23.yaml  setup_sat_ACLOUD_P5_RF25.yaml  setup_sat_AFLUX_P5_RF08.yaml  (+2 more)
src/si_emis/tables/: table_02_satellites.py  table_03_emissivity.py  table_04_comparison.py
src/si_emis/writers/: __init__.py  brightness_temperature.py  emissivity.py  footprint.py  pamtra_simulation.py
tools/: get_amsr2_sea_ice.sh
