[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "si-emis"
version = "0.0.1"
authors = [
  { name = "Nils Risse", email = "n.risse@uni-koeln.de" },
]
description = "Sea ice emissivity analysis of airborne and satellite observations."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.black]
line-length = 79
